# boilernet

./: .gitignore  Dockerfile  pyproject.toml
net/: preprocess.py
