[tool.poetry]
name = "boilernet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
