[tool.poetry]
name = "boilernet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.8"
html5lib = "^1.0"
nltk = "^3.4.5"
tensorflow = "^2.1"
tqdm = "^4.39"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
